--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,12 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  font-family: 'Roboto', sans-serif;
+  background-color: #303030;
+  color: white;
+}
+a {
+  color: white;
+  text-decoration: none;
+  font-weight: bold;
 }
