--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,7 +2,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: 'Roboto', sans-serif;
-  background-color: #a1a1a1;
+  background-color: #c0c0c0;
   color: white;
 }
 a {
